--- a/package.json
+++ b/package.json
@@ -1,34 +1,59 @@
 
 {
-  "name": "vitalemente",
-  "version": "0.1.0",
+  "name": "vitalmente-app",
+  "version": "1.0.0",
+  "description": "Plataforma empresarial de bienestar integral con IA",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "db:setup": "node lib/init-database.js"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.16",
-    "uuid": "^10.0.0",
-    "@supabase/supabase-js": "^2.39.0"
+    "next": "14.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "typescript": "^5.0.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@supabase/supabase-js": "^2.38.0",
+    "recharts": "^2.8.0",
+    "axios": "^1.6.0",
+    "uuid": "^9.0.0",
+    "@types/uuid": "^9.0.0",
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/uuid": "^10.0.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.16",
-    "autoprefixer": "^10.4.20"
+    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.0.0"
   },
+  "keywords": [
+    "nutrition",
+    "fitness", 
+    "wellness",
+    "enterprise",
+    "ai-insights",
+    "supabase",
+    "nextjs",
+    "business",
+    "health-tech"
+  ],
+  "author": "VitalMente Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tu-empresa/vitalmente-app.git"
+  },
+  "homepage": "https://vitalmente.com",
   "engines": {
-    "node": ">=18.17.0"
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
